[package]
name = "checkers-tui"
version = "0.1.0"
description = "Basic checkers game in ratatui"
authors = ["Diego Della Vecchia <diego.dellavecchia3@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
